--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.72.0",
+    "@aws-cdk/assert": "1.152.0",
     "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk": "1.72.0",
+    "@types/node": "^10.17.27",
+    "aws-cdk": "1.152.0",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-appsync": "^1.73.0",
-    "@aws-cdk/aws-ec2": "^1.73.0",
-    "@aws-cdk/aws-lambda": "^1.73.0",
-    "@aws-cdk/aws-rds": "^1.73.0",
-    "@aws-cdk/core": "1.73.0",
+    "@aws-cdk/aws-appsync": "^1.152.0",
+    "@aws-cdk/aws-ec2": "^1.152.0",
+    "@aws-cdk/aws-lambda": "^1.152.0",
+    "@aws-cdk/aws-rds": "^1.152.0",
+    "@aws-cdk/core": "1.152.0",
     "source-map-support": "^0.5.16"
   }
 }
